Renamed "whole vectors" to "Force vectors"
# 1.03.16 (31291) May 4, 2009
removed slider labels as recommended by CM to see if this fixes the applied force slider knob problem
# 1.03.15 (31283) May 4, 2009
5/4/09 workaround for memory problems (not in svn)
Removed tick marks from applied force slider to make slider knob appear on mac.
Renamed "original" vectors to "whole vectors"
Robot loses energy even when work done on the particle by the robot is negative.
# 1.03.14 (31275) May 3, 2009
set applied force to zero on slider mouse release for all tabs
allow showing values outside the settable range for the applied force slider
bugfix in work calculation
robotmovingcompany: it looks like robot energy is only used up when the robot is pushing to the left.
robotmovingcompany: additional points (up to 100) for having battery left over
robotmovingcompany: add detection of game over and new game
robotmovingcompany: automatically go to next object when you score or lose the object (instead of hitting "next object" button)
robotmovingcompany: moving the applied force slider starts the game
# 1.03.13 (31267) May 3, 2009
Make "custom crate" text label match font for other labels.
Layout fixes for object selection panel.
fixed: Original forces checkbox should update when sim is paused.
robot energy refills after each object
for game tab, set applied force to zero on slider mouse release
# 1.03.12 (31256) May 3, 2009
5/3/09 Performance fixes for the game tab
# 1.03.11 (31234) May 1, 2009
5/1/09 minor fixes
# 1.03.10 (31217) May 1, 2009
5/1/09 bugfixes for rotation
# 1.03.09 (31213) May 1, 2009
5/1/09 Improvements for game model and coordinate frames 
# 1.03.08 (31211) May 1, 2009
5/1/09 Improvements for game model and coordinate frames
# 1.03.07 (31209) May 1, 2009
5/1/09 improvements for rotatable components and added energy model for game mode
# 1.03.06 (31153) Apr 29, 2009
4/29/09 Improvements for game mode.
# 1.03.05 (31088) Apr 28, 2009